--- a/revgen.html
+++ b/revgen.html
@@ -469,97 +469,97 @@
 								</tr>							
 								<tr>
 									<td>Aegyptus</td>
-									<td><select id="provaeg" name="provaeg"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option></select></td>
+									<td><select id="provaeg" name="provaeg"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option><option value="X">No Revenue</option></select></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provaeg_spoils"   name="provaeg_spoils"   /></label></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provaeg_improved" name="provaeg_improved" checked="checked" disabled/></label></td>
 								</tr>
 								<tr>
 									<td>Africa</td>
-									<td><select id="provafr" name="provafr"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option></select></td>
+									<td><select id="provafr" name="provafr"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option><option value="X">No Revenue</option></select></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provafr_spoils"   name="provafr_spoils"   /></label></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provafr_improved" name="provafr_improved" /></label></td>
 								</tr>
 								<tr>
 									<td>Asia</td>
-									<td><select id="provasi" name="provasi"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option></select></td>
+									<td><select id="provasi" name="provasi"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option><option value="X">No Revenue</option></select></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provasi_spoils"   name="provasi_spoils"   /></label></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provasi_improved" name="provasi_improved" /></label></td>
 								</tr>
 								<tr>
 									<td>Bithynia</td>
-									<td><select id="provbit" name="provbit"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option></select></td>
+									<td><select id="provbit" name="provbit"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option><option value="X">No Revenue</option></select></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provbit_spoils"   name="provbit_spoils"   /></label></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provbit_improved" name="provbit_improved" /></label></td>
 								</tr>
 								<tr>
 									<td>Cilicia et Cyprus</td>
-									<td><select id="provcec" name="provcec"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option></select></td>
+									<td><select id="provcec" name="provcec"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option><option value="X">No Revenue</option></select></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provcec_spoils"   name="provcec_spoils"   /></label></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provcec_improved" name="provcec_improved" /></label></td>
 								</tr>
 								<tr>
 									<td>Creta et Cyrenaica</td>
-									<td><select id="provcrc" name="provcrc"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option></select></td>
+									<td><select id="provcrc" name="provcrc"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option><option value="X">No Revenue</option></select></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provcrc_spoils"   name="provcrc_spoils"   /></label></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provcrc_improved" name="provcrc_improved" /></label></td>
 								</tr>
 								<tr>
 									<td>Gallia Cisalpina</td>
-									<td><select id="provgci" name="provgci"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option></select></td>
+									<td><select id="provgci" name="provgci"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option><option value="X">No Revenue</option></select></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provgci_spoils"   name="provgci_spoils"   /></label></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provgci_improved" name="provgci_improved" /></label></td>
 								</tr>
 								<tr>
 									<td>Gallia Narbonensis</td>
-									<td><select id="provgna" name="provgna"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option></select></td>
+									<td><select id="provgna" name="provgna"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option><option value="X">No Revenue</option></select></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provgna_spoils"   name="provgna_spoils"   /></label></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provgna_improved" name="provgna_improved" /></label></td>
 								</tr>
 								<tr>
 									<td>Gallia Transalpina</td>
-									<td><select id="provgtr" name="provgtr"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option></select></td>
+									<td><select id="provgtr" name="provgtr"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option><option value="X">No Revenue</option></select></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provgtr_spoils"   name="provgtr_spoils"   /></label></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provgtr_improved" name="provgtr_improved" /></label></td>
 								</tr>
 								<tr>
 									<td>Hispania Citerior</td>
-									<td><select id="provhci" name="provhci"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option></select></td>
+									<td><select id="provhci" name="provhci"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option><option value="X">No Revenue</option></select></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provhci_spoils"   name="provhci_spoils"   /></label></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provhci_improved" name="provhci_improved" /></label></td>
 								</tr>
 								<tr>
 									<td>Hispania Ulterior</td>
-									<td><select id="provhul" name="provhul"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option></select></td>
+									<td><select id="provhul" name="provhul"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option><option value="X">No Revenue</option></select></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provhul_spoils"   name="provhul_spoils"   /></label></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provhul_improved" name="provhul_improved" /></label></td>
 								</tr>
 								<tr>
 									<td>Illyricum</td>
-									<td><select id="provill" name="provill"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option></select></td>
+									<td><select id="provill" name="provill"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option><option value="X">No Revenue</option></select></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provill_spoils"   name="provill_spoils"   /></label></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provill_improved" name="provill_improved" /></label></td>
 								</tr>
 								<tr>
 									<td>Macedonia</td>
-									<td><select id="provmac" name="provmac"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option></select></td>
+									<td><select id="provmac" name="provmac"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option><option value="X">No Revenue</option></select></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provmac_spoils"   name="provmac_spoils"   /></label></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provmac_improved" name="provmac_improved" /></label></td>
 								</tr>
 								<tr>
 									<td>Sardinia et Corsica</td>
-									<td><select id="provsec" name="provsec"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option></select></td>
+									<td><select id="provsec" name="provsec"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option><option value="X">No Revenue</option></select></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provsec_spoils"   name="provsec_spoils"   /></label></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provsec_improved" name="provsec_improved" /></label></td>
 								</tr>
 								<tr>
 									<td>Sicilia</td>
-									<td><select id="provsic" name="provsic"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option></select></td>
+									<td><select id="provsic" name="provsic"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option><option value="X">No Revenue</option></select></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provsic_spoils"   name="provsic_spoils"   /></label></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provsic_improved" name="provsic_improved" /></label></td>
 								</tr>
 								<tr>
 									<td>Syria</td>
-									<td><select id="provsyr" name="provsyr"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option></select></td>
+									<td><select id="provsyr" name="provsyr"><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option><option value="X">No Revenue</option></select></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provsyr_spoils"   name="provsyr_spoils"   /></label></td>
 									<td class="text-center"><label style="margin-bottom:0px;"><input type="checkbox" class="mr-2" id="provsyr_improved" name="provsyr_improved" /></label></td>
 								</tr>	
